--- a/index-style.css
+++ b/index-style.css
@@ -1,44 +1,171 @@
-.baslik h2 {
-    text-align: center;
-    font-size: 50px;   
-    color: white; 
-    margin-top: 300px;
-    border: 2px white solid;    
-    margin-right: 70px;
-    margin-left: 70px;
-    
-}
 
-.container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: #f2f2f2;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 20px;
-    color: black;
-    z-index: 999;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
 
 body {
     background-color: black;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-    line-height: 1.5;
-    color: #333;
     margin: 0;
-    padding: 0; 
+    padding: 0;
 }
 
-.logo {
-    padding-top: 170px;
-    text-align: center;
 
+.navbar {
+    background-color: black;
+    color: white;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+    height: 100px;
+    border-bottom: #00FFFF 1px solid;
+
+}
+
+
+.item a{
+    list-style: none;
+    padding: 15px;
+    list-style: none;  
+    text-decoration: none; 
+    color: white;
+    font-size: 17px;
+    font-weight: 550;
+    font-family: 'Roboto', sans-serif;    
 }   
-.logo img {
-    margin-bottom: 0;
+
+.list {
+    list-style: none;
 }
+
+
+
+
+
+.menu ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    margin-right: 30px;
+    padding: 5px;
+    }   
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+    }   
+
+
+
+
+.navbar img {
+    height: 120px;   
+    padding: 0 20px;
+    }   
+
+.menu ul li {
+    list-style-type: none;
+    text-decoration: none;
+    padding: 10px;  
+
+    display: flex;
+    border-radius: 3px;
+}
+
+.menu ul li a:hover {
+    border-bottom: 2px solid #00FFFF;
+    border-radius: 3px;
+    }
+    
+    
+.active {
+    border-bottom: 2px solid #00FFFF;
+    border-radius: 3px;
+    }   
+
+
+.ana1 {
+    background-color: white;
+    margin: 10px;
+    width: auto;
+    height: 1000px;  
+    border-radius: 15px;
+}
+
+h1 {
+    font-size: 50px;
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    text-align: center;
+    padding: 40px;  
+}
+
+p {
+    font-size: 30px;
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    text-align: left;
+    padding: 40px;  
+    }
+
+    .footer {
+        background-color: #000;
+        height: 50px;
+        width: 100%;
+        margin: 0;
+        margin-left: 0;
+        margin-bottom: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        position: relative;
+        bottom: 0;
+        left: 0;
+        z-index: 999;
+        border-top: 1px solid #00FFFF ;
+      } 
+      
+      .footer p {
+        color: white;
+        text-align: center;
+        padding-top: auto;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 20px;  
+        padding :0;
+
+      }
+
+
+      @media screen and (max-width: 600px) {
+
+
+        body {
+            background-color: black;
+            margin: 0;
+            padding: 0; 
+        }
+        .navbar {
+            align-items: center;
+            text-align: center;
+            flex-direction: column;
+            margin-bottom: 300px;
+            margin-top: 0;
+            width: auto;
+        }
+
+        .list {
+            margin: -40px;
+        }
+
+      }
+      
