--- a/index-style.css
+++ b/index-style.css
@@ -196,6 +196,7 @@ p {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            font-size: 8px;
             
             margin-right: 0;
             margin-top: 0;
