--- a/index-style.css
+++ b/index-style.css
@@ -148,6 +148,17 @@ p {
 
       @media screen and (max-width: 600px) {
 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Roboto', sans-serif;
+        }   
+
+
+        .ana1 h1 {
+        font-size: 100%;    
+        }
 
         .navbar {
             background-color: black;
@@ -162,9 +173,8 @@ p {
             justify-content: space-between;
             align-items: center;
             flex-direction: column;
-            height: 30px;
             top: 0;
-            width: 100%;
+            width: auto;
             z-index: 999;
             height: 100px;
             border-bottom: #00FFFF 1px solid;
@@ -199,7 +209,7 @@ p {
             font-size: 8px;
             
             margin-right: 0;
-            margin-top: 0;
+            margin-top: -20px;
             padding: 5px;
             }   
         
@@ -216,6 +226,7 @@ p {
         .navbar img {
             height: 120px;   
             padding: 0 20px;
+            padding-bottom: 10px;
             }   
             
         
