--- a/index-style.css
+++ b/index-style.css
@@ -187,6 +187,7 @@ p {
             padding: 0;
             list-style: none;  
             text-decoration: none; 
+            text-align: center;
             padding-bottom: 15px;
             color: white;
             font-size: 13px;
