--- a/index-style.css
+++ b/index-style.css
@@ -177,8 +177,7 @@ p {
             width: auto;
             z-index: 999;
             height: 100px;
-            border-bottom: #00FFFF 1px solid;
-        
+            border-bottom: none;
         }
         
         
@@ -219,7 +218,9 @@ p {
             justify-content: space-between;
             align-items: center;
             width: auto;
+            border-bottom: 1px solid #00FFFF;
             }   
+         
         
         
         
@@ -227,7 +228,7 @@ p {
         .navbar img {
             height: 120px;   
             padding: 0 20px;
-            padding-bottom: 10px;
+            padding-bottom: 6px;
             }   
             
         
