--- a/index-style.css
+++ b/index-style.css
@@ -160,6 +160,10 @@ p {
         font-size: 100%;    
         }
 
+        .ana p {
+            font-size: 100%;
+        }
+
         .navbar {
             background-color: black;
             color: white;
@@ -230,6 +234,8 @@ p {
             padding: 0 20px;
             padding-bottom: 6px;
             }   
+
+        
             
         
         .menu ul li {
@@ -239,6 +245,18 @@ p {
             display: flex;
             border-radius: 6px;
         }
+
+        .footer {
+            width: auto;
+            text-align: center;
+            align-items: center;
+        }
+
+        .footer p {
+            margin-top: 18px;
+        }
+
+        
 
     
       }
