--- a/index-style.css
+++ b/index-style.css
@@ -96,12 +96,17 @@ body {
 
 
 .ana1 {
-    background-color: white;
+    background-image: url(uzay.gif);
+    background-repeat: repeat;
+    background-size: cover;
+    background-position: center;
     margin: 10px;
     width: auto;
-    height: 450px;  
+    height: 600px;  
     border-radius: 15px;
 }
+
+
 
 h1 {
     font-size: 50px;
@@ -133,6 +138,7 @@ p {
         left: 0;
         z-index: 999;
         border-top: 1px solid #00FFFF ;
+        display: none;
       } 
       
       .footer p {
@@ -155,6 +161,10 @@ p {
             font-family: 'Roboto', sans-serif;
         }   
 
+
+        .ana1 {
+            background-image: url(uzay-mobil.gif);
+        }
 
         .ana1 h1 {
             font-size: 30px;
