--- a/index-style.css
+++ b/index-style.css
@@ -9,6 +9,89 @@ body {
     padding: 0;
 }
 
+.fotolar h1 {
+    font-size: 40px;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    text-align: center;
+    margin-top: 40px;
+    padding: 5px;
+}
+
+.nedenbiz {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .icerik1,
+  .icerik {
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  .icerik {
+    background-color: black; 
+
+  }
+
+  p.yazi {
+    color: white;
+    padding: 80px;
+    padding-top: 150;
+    margin-top: 140px;
+    text-align: left;
+
+  }
+
+  
+
+  .icerik1 {
+    background-color: black;    
+    border-radius: 35px;
+    height: 400px;
+    width: 1900px;
+    align-items: center;
+    padding-top: 150px;
+  }
+
+  .icerik1 h1 {
+    text-align: center;
+    align-items: center;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+
+  
+
+.yazi {
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    text-align: center;
+    padding: 5px;
+}
+
+.fotolar img {
+    height: 130px;
+    text-align: center;
+    padding: 25px;
+    padding-top: 10px; 
+    margin-bottom: 20px;
+  }
+.fotolar {
+  text-align: center;
+  align-items: center;
+  background-color: black;
+  border-top: 2px solid #00FFFF;    
+  border-bottom: 2px solid #00FFFF;    
+  }
+.fotolar img:not(:last-child) {
+    margin-right: 20px;
+    border-right: 1px solid #00FFFF;
+    padding-right: 20px;
+  }
+
 
 .navbar {
     background-color: black;
@@ -19,7 +102,7 @@ body {
     position: center;
     text-align: center;
     padding: 5px;
-    margin-left: 21.5rem;
+    margin: 21.5rem;
     display: flex;
     position: fixed;
     justify-content: space-between;
