--- a/konular.css
+++ b/konular.css
@@ -1,85 +1,50 @@
-body{
-margin: 0;
-padding: 0;
-display: grid;
-grid-template-columns: repeat(auto-fit , minmax(16rem , 0.3fr));
-gap: 2rem;
-justify-content: center ;
-}
-.car{
-    overflow: hidden;
-    border: 1px solid;
-    box-shadow:  4px 4px ;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    cursor: pointer;
-}
-&__image{
-    height: 12rem;
-    width: 100%;
-    object-fit: cover;
-}
 
 
-&__title{
-    padding: 1rem;
-}
-&__description{
-    padding: 0 1rem;
-}
-&__link{
-    text-decoration:none;
-    padding: 1rem;
-    font-weight: bold;
-}
- 
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
 
 
 
-
-
-
-
-
-/* *{
+*{
     margin: 0;
     padding: 0;
 }
-.container{
-    background-color: rgb(121, 130, 139);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20vh;
-    height: 70vh;
-    width: 50vw; 
-    margin-left: 23vw;
-}
- .konu1{
-    display: inline-block;
 
-}
-.konu1 p , .konu2 p {
-    display: inline-block;
-    font-size: 15px;
-    padding: 0;
-    width: 400px;
-    margin: 3px;
-}
-.container .konu1 img{
-    display: inline-block;
-    margin: 10px;
-    height: 100px;
-    margin-left: 8px;
-}
-.konu2 img{
-    display: inline-block;
-    margin: 10px;
-    height: 150px;
-}
-.konu2 p{
-    margin-top: 0px;
-    font-size: 15px;
-} */
+.cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+    max-width: 800px;
+    margin-top: 150px;
+  }
+  
+  .card {
+    background-color: #f1f1f1;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .card img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .card h1 {
+    font-size: 20px;
+    padding: 5px;
+    font-family:sans-serif;
+  }
+  
+  .card p {
+    font-size: 14px;
+    padding: 5px;
+    font-family:sans-serif;
+  }
+  .devam{
+    cursor: pointer;
+    
+  }
+
+
